--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,13 @@
-<h1>Listing users</h1>
+<h1>Top Users</h1>
 
 <table>
   <tr>
     <th>Login</th>
-    <th>Email</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.login %></td>
-    <td><%= user.email %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= link_to user.login, user_path(user.id) %></td>
+    </tr>
+  <% end %>
 </table>
 
-<br />
-
-<%= link_to 'New User', new_user_path %>
