--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New user</h1>
+<h1>Register</h1>
 
-<%= render 'form' %>
+<%= render :partial => 'form', :object => @user, :as => :user %>
 
-<%= link_to 'Back', users_path %>
