--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,5 @@
+/* rails defaults */
+
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
@@ -54,3 +56,30 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+/* end rails defaults */
+
+.nav {
+	width: 100%;
+	float: left;
+	padding: 0;
+	list-style: none;
+}
+
+.nav li {
+	float: left;
+}
+
+.nav li a {
+  color: #d60062;
+	display: block;
+	padding: 15px 8px 0px 8px;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.nav li a:hover {
+	color: #ccc;
+	background-color: transparent;
+}
+
