--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,7 +73,7 @@ div.field, div.actions {
 .nav li a {
   color: #d60062;
 	display: block;
-	padding: 15px 8px 0px 8px;
+	padding: 15px 8px 15px 8px;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -85,5 +85,10 @@ div.field, div.actions {
 
 input.blur {
   color: gray;
+}
+
+#login {
+  float: right;
+  padding-top: 5px;
 }
 
