--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :nav do %>
+  <%= raw(nav_content) %>
+<% end %>
+
 <h1>Listing postings</h1>
 
 <%= link_to 'Create New Posting', new_posting_path %>
