--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -5,14 +5,20 @@
 <%= form_for(@posting) do |f| %>
   <% f.error_messages  %>
   <p>
-    I <%= f.select :have_need, ["have", "need"] %>
-    a <%= f.text_field :name, :title => 'e.g. toy boat' %>
+    I
+    <%= f.select :have_need, [['can provide','have'], 'need'] %>
+    <% if params[:product_service] == 'product' %>
+      <%= f.text_field :name, :title => 'e.g. one ring to rule them all...' %>
+      <%= f.hidden_field :product_service, :value => 'product' %>
+    <% else %>
+      <%= f.text_field :name, :title => 'e.g. nunchuck skillz' %>
+      <%= f.hidden_field :product_service, :value => 'service' %>
+    <% end %>
     <br/>
     available from <%= f.text_field :from_date, :title => 'click to select date'%>
     to <%= f.text_field :to_date, :title => 'click to select date' %>.
   </p>
   <%= f.hidden_field :user_id, :value => current_user.id %>
-  <%= f.hidden_field :product_service, :value => 'product' %>
   <div class="actions">
     <%= f.submit %>
   </div>
