--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -4,3 +4,8 @@
   available from <%= @posting.from_date %> to <%= @posting.to_date %>.
 </p>
 
+<%= link_to 'Make Offer', offer_posting_path, :remote => true %>
+<div id="offer_form"></div>
+
+<div id="offer_list"><%= render :partial => 'offers/list' %></div>
+
