Added method to accept offers. Added status to posting based on whether an offer has been accepted

--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -1,15 +1,3 @@
-<% if action_name =~ /product/ %>
-  <% prod_serv = 'product' %>
-<% else %>
-  <% prod_serv = 'service' %>
-<% end %>
-
-<% if action_name =~ /inventory/ %>
-  <% inv_req = 'inventory' %>
-<% else %>
-  <% inv_req = 'request' %>
-<% end %>
-
 <% content_for :sidenav do %>
   <%= raw(sidenav_content) %>
 <% end %>
@@ -20,7 +8,7 @@
 
 <h1>Listing postings</h1>
 
-<%= link_to 'Create New Posting', new_posting_path(:product_service => prod_serv) %>
+<%= link_to 'Create New Posting', new_posting_path(:product_service => (action_name =~ /product/ ? 'product' : 'service')) %>
 
 <table>
   <tr>
@@ -29,21 +17,17 @@
     <th>From date</th>
     <th>To date</th>
     <th>User</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Status</th>
   </tr>
 
 <% @postings.each do |posting| %>
   <tr>
-    <td><%= posting.name %></td>
+    <td><%= link_to posting.name, posting %></td>
     <td><%= posting.description %></td>
     <td><%= posting.from_date %></td>
     <td><%= posting.to_date %></td>
     <td><%= posting.user.login %></td>
-    <td><%= link_to 'Show', posting %></td>
-    <td><%= link_to 'Edit', edit_posting_path(posting) %></td>
-    <td><%= link_to 'Destroy', posting, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= posting.status %></td>
   </tr>
 <% end %>
 </table>
