--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_for @offer, :url => offer_posting_path, :remote => true do |f| %>
+<%= form_for @offer, :url => posting_offers_path, :remote => true do |f| %>
   <%= f.error_messages %>
   <%= f.label :message %><br/>
   <%= f.text_area :message %><br/>
   <%= f.hidden_field :user_id, :value => current_user.id %>
-  <%= f.hidden_field :posting_id, :value => params[:id] %>
+  <%= f.hidden_field :posting_id, :value => params[:posting_id] %>
   <%= f.submit %>
 <% end %>
 
