--- a/app/views/offers/_list.html.erb
+++ b/app/views/offers/_list.html.erb
@@ -2,12 +2,20 @@
   <tr>
     <th>Offerrer</th>
     <th>Message</th>
+    <th>Status</th>
+    <th></th>
   </tr>
 
   <% @offers.each do |offer| %>
     <tr>
       <td><%= offer.user.login %></td>
-      <td><%= offer.message %></tr>
+      <td><%= offer.message %></td>
+      <td><%= offer.status %></td>
+      <% if offer.posting.user_id == current_user.id %>
+        <td><%= link_to 'Accept Offer', accept_posting_offer_path(offer.posting_id, offer.id), :remote => true, :method => :post %></td>
+      <% else %>
+        <td><%= link_to 'Edit Offer', edit_posting_offer_path(offer.posting_id, offer.id), :remote => true, :method => :post %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
