--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -4,8 +4,10 @@
   available from <%= @posting.from_date %> to <%= @posting.to_date %>.
 </p>
 
-<%= link_to 'Make Offer', offer_posting_path, :remote => true %>
-<div id="offer_form"></div>
+<% if current_user.id != @posting.user_id %>
+  <%= link_to 'Make Offer', new_posting_offer_path(@posting.id), :remote => true %>
+  <div id="offer_form"></div>
+<% end %>
 
 <div id="offer_list"><%= render :partial => 'offers/list' %></div>
 
