Made creating postings more ajaxy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>schwap.it</title>
+  <title>Uswap</title>
   <%= stylesheet_link_tag 'blueprint/screen.css', :media => 'screen, projection' %>
   <%= stylesheet_link_tag 'blueprint/print.css', :media => 'print' %>
   <!–[if IE]><%= stylesheet_link_tag 'blueprint/ie.css', :media => 'screen, projection' %><![endif]–>
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="logo" class="span-5"><h1>schwap.it</h1></div>
+    <div id="logo" class="span-4"><h1>Uswap</h1></div>
     <div id="topnav" class="span-17 last">
       <ul class="nav">
         <%= yield :topnav %>
