Changed offers to append rows to table

--- a/app/views/offers/create.js.erb
+++ b/app/views/offers/create.js.erb
@@ -1,4 +1,4 @@
 $('#notice').html('<%= @notice %>');
-$('#offer_list').html('<%= escape_javascript(render :partial => 'offers/list') %>');
 $('#offer_form').html('');
+$('#offer_list').append('<%= raw(offer_table_row(@offer)) %>');
 
