--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -1,4 +1,4 @@
 $('#notice').html('<%= @notice %>');
 $('#posting_form').html('');
-$('#posting_list').append('<%= raw(table_row(@posting)) %>')
+$('#posting_list').append('<%= raw(posting_table_row(@posting)) %>')
 
