--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -9,5 +9,5 @@
   <div id="offer_form"></div>
 <% end %>
 
-<div id="offer_list"><%= render :partial => 'offers/list' %></div>
+<%= render :partial => 'offers/list' %>
 
