--- a/app/views/offers/create.js.erb
+++ b/app/views/offers/create.js.erb
@@ -1,4 +1,4 @@
-$('#notice').html('<%= @notice %>');
+$('#offer_notice').html('<%= @notice %>');
 $('#offer_form').html('');
 $('#offer_list').append('<%= raw(offer_table_row(@offer)) %>');
 
