--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,8 +22,9 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
-#notice {
+#notice, #offer_notice {
   color: green;
+  margin-bottom: 5px;
 }
 
 .field_with_errors {
