--- a/app/views/postings/new.js.erb
+++ b/app/views/postings/new.js.erb
@@ -1,7 +1,11 @@
-$('#posting_form').html('<%= escape_javascript(render :partial => 'form') %>');
-$('input[title!=""]').hint();
-$("#posting_from_date, #posting_to_date").datepicker();
-$("#posting_from_date, #posting_to_date").change(function() {
-  $(this).removeClass('blur');
-});
+if ($('#posting_form').is(':empty')) {
+  $('#posting_form').html('<%= escape_javascript(render :partial => 'form') %>');
+  $('input[title!=""]').hint();
+  $("#posting_from_date, #posting_to_date").datepicker();
+  $("#posting_from_date, #posting_to_date").change(function() {
+    $(this).removeClass('blur');
+  });
+} else {
+  $('#posting_form').html('');
+}
 
