updated to git version of facebox

--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -3,5 +3,5 @@
 <%= new_posting_link %>
 <div id="posting_form"></div>
 
-<%= render :partial => "list" %>
+<%= render :partial => 'postings/list' %>
 
