--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <% @users.each do |user| %>
     <tr>
-      <td><%= link_to user.login, user_path(user.id) %></td>
+      <td><%= link_to user.full_name, user_path(user.id) %></td>
     </tr>
   <% end %>
 </table>
