--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -7,7 +7,6 @@
 <h1>Listing postings</h1>
 
 <%= new_posting_link %>
-<div id="posting_form"></div>
 
 <table id="posting_list">
   <tr>
@@ -20,7 +19,7 @@
 
 <% @postings.each do |posting| %>
   <tr>
-    <td><%= link_to posting.name, posting, :rel => 'facebox' %></td>
+    <td><%= link_to posting.name, posting %></td>
     <td><%= posting.from_date %></td>
     <td><%= posting.to_date %></td>
     <td><%= posting.user.full_name %></td>
