--- a/app/views/postings/new.js.erb
+++ b/app/views/postings/new.js.erb
@@ -1,11 +1,14 @@
-if ($('#posting_form').is(':empty')) {
-  $('#posting_form').html('<%= escape_javascript(render :partial => 'form') %>');
+$(document).ready(function() {
   $('input[title!=""]').hint();
+
   $("#posting_from_date, #posting_to_date").datepicker();
+
   $("#posting_from_date, #posting_to_date").change(function() {
     $(this).removeClass('blur');
   });
-} else {
-  $('#posting_form').html('');
-}
+
+  $('#new_posting').submit(function () {
+    $.facebox.close();
+  });
+});
 
