--- a/app/views/offers/create.js.erb
+++ b/app/views/offers/create.js.erb
@@ -1,4 +1,3 @@
-$('#offer_notice').html('<%= @notice %>');
-$('#offer_form').html('');
+$('#notice').html('<%= @notice %>');
 $('#offer_list').append('<%= raw(offer_table_row(@offer)) %>');
 
