fixes #12: Added editing of offers.

--- a/app/views/offers/create.js.erb
+++ b/app/views/offers/create.js.erb
@@ -1,3 +1,5 @@
+$.facebox.close();
 $('#notice').html('<%= @notice %>');
 $('#offer_list').append('<%= raw(offer_table_row(@offer)) %>');
+$('#offer_link').remove();
 
