--- a/app/views/offers/_list.html.erb
+++ b/app/views/offers/_list.html.erb
@@ -14,7 +14,7 @@
       <% if offer.posting.user_id == current_user.id %>
         <td><%= link_to 'Accept Offer', accept_posting_offer_path(offer.posting_id, offer.id), :remote => true, :method => :post %></td>
       <% else %>
-        <td><%= link_to 'Edit Offer', edit_posting_offer_path(offer.posting_id, offer.id), :remote => true, :method => :post %></td>
+        <td><%= link_to 'Edit Offer', edit_posting_offer_path(offer.posting_id, offer.id), :rel => 'facebox' %></td>
       <% end %>
     </tr>
   <% end %>
