--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -14,9 +14,11 @@
   from <%= @posting.from_date %> to <%= @posting.to_date %>.
 </p>
 
-<% if current_user.id != @posting.user_id %>
-  <%= link_to 'Make Offer', new_posting_offer_path(@posting), :rel => 'facebox' %>
+<% if current_user.id != @posting.user_id and
+  Offer.where(:posting_id => @posting.id, :user_id => current_user.id).first.nil?
+%>
+  <%= link_to 'Make Offer', new_posting_offer_path(@posting), :rel => 'facebox', :id => 'offer_link' %>
 <% end %>
 
-<%= render :partial => "offers/list" %>
+<div id="offers"><%= render :partial => "offers/list" %></div>
 
