--- a/app/views/postings/edit.html.erb
+++ b/app/views/postings/edit.html.erb
@@ -1,6 +1,4 @@
 <h1>Editing posting</h1>
 
-<%= render 'form' %>
+<%= render :partial => 'postings/form' %>
 
-<%= link_to 'Show', @posting %> |
-<%= link_to 'Back', postings_path %>
