--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -1,18 +1,17 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'facebox', :media => 'screen' %>
   <%= javascript_include_tag 'facebox' %>
-  <%= javascript_include_tag posting_path(@posting) %>
+  <%= javascript_include_tag postings_path %>
 <% end %>
 
 <%= back_or_default_link 'Return to postings', postings_path %><br/><br/>
 
-<p>
-  <%= @posting.user.full_name %>
-  <%= @posting.have_need == 'have' ? 'has' : 'needs' %>
-  <%= @posting.name %>
-  <br/>
-  from <%= @posting.from_date %> to <%= @posting.to_date %>.
-</p>
+<%= render :partial => "postings/info" %>
+
+<% if current_user.id == @posting.user_id %>
+  <%= link_to 'Edit Posting', edit_posting_path(@posting), :rel => 'facebox' %>
+<% end %>
+
 
 <% if current_user.id != @posting.user_id and
   Offer.where(:posting_id => @posting.id, :user_id => current_user.id).first.nil?
@@ -20,5 +19,5 @@
   <%= link_to 'Make Offer', new_posting_offer_path(@posting), :rel => 'facebox', :id => 'offer_link' %>
 <% end %>
 
-<div id="offers"><%= render :partial => "offers/list" %></div>
+<%= render :partial => "offers/list" %>
 
