--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'text_hints' %>
+<%= javascript_include_tag 'text_hints', new_posting_path %>
 
 <%= form_for @posting, :remote => true do |f| %>
   <% f.error_messages  %>
