--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -4,7 +4,7 @@
   <%= javascript_include_tag postings_path %>
 <% end %>
 
-<h1>Listing postings</h1>
+<h1>Postings</h1>
 
 <div id="search">
   <% form_for :search, @search, :html => {:method => :get} do |f| %>
