--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -79,14 +79,21 @@ div.field, div.actions {
 	font-weight: bold;
 }
 
+#sidenav .nav li a {
+  padding: 15px 50px 15px 8px;
+}
+
 .nav li a.current {
   color: #000000;
+  background-color: #e3e9ff;
 }
 
 .nav li a:hover {
 	color: #ccc;
 	background-color: transparent;
 }
+
+.nav li a:hover.current { background-color: #e3e9ff; }
 
 input.blur {
   color: gray;
@@ -98,4 +105,10 @@ input.blur {
 }
 
 #search { margin-bottom: 10px; }
+
+#content { background-color: #e3e9ff; }
+
+ul.nav { margin: 0px; }
+
+#logo h1 { margin-bottom: 0px; }
 
