--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for user do |f| %>
+<%= form_for @user, :remote => true do |f| %>
   <%= f.error_messages %>
   <div class="field">
     <%= f.label :first_name %><br/>
