--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Register</h1>
 
-<%= render :partial => 'form', :object => @user, :as => :user %>
+
+<div id="new_user_form"><%= render :partial => 'users/form' %></div>
 
