fixes #21: Added validations for create and update of postings, offers, and users.

--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @offer,
-  :url => action_name == 'new' ? posting_offers_path : posting_offer_path(params[:posting_id], params[:id]),
+  :url => action_name =~ /new|create/ ? posting_offers_path : posting_offer_path(params[:posting_id], params[:id]),
   :remote => true do |f|
 %>
   <%= f.error_messages %>
