--- a/app/views/offers/_list.html.erb
+++ b/app/views/offers/_list.html.erb
@@ -7,7 +7,7 @@
       <th></th>
     </tr>
 
-    <% @offers.each do |offer| %>
+    <% offers.each do |offer| %>
       <tr>
         <td><%= offer.user.full_name %></td>
         <td><%= offer.message %></td>
