--- a/app/views/offers/accept.js.erb
+++ b/app/views/offers/accept.js.erb
@@ -1,3 +1,3 @@
 $('#offer_notice').html('Offer accepted.');
-$('#offer_list').html('<%= escape_javascript(render :partial => 'offers/list') %>');
+$('#offer_list').html('<%= escape_javascript(render :partial => 'offers/list', :object => @offers, :as => :offers) %>');
 
