--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Make Offer</h1>
 
-<%= render :partial => 'offers/form' %>
+<div id="new_offer_form"><%= render :partial => 'offers/form' %></div>
 
