--- a/app/views/postings/edit.html.erb
+++ b/app/views/postings/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Editing posting</h1>
 
-<%= render :partial => 'postings/form' %>
+<div id="edit_posting_form"><%= render :partial => 'postings/form' %></div>
 
