--- a/app/views/postings/new.html.erb
+++ b/app/views/postings/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Posting</h1>
 
-<%= render :partial => 'postings/form' %>
+<div id="new_posting_form"><%= render :partial => 'postings/form' %></div>
 
