--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -12,10 +12,10 @@
       <%= f.hidden_field :have_need, :value => 'need' %>
     <% end %>
     <% if params[:product_service] == 'product' %>
-      <%= f.text_field :name, :title => 'e.g. one ring to rule them all...' %>
+      <%= f.text_field :description, :title => 'e.g. one ring to rule them all...' %>
       <%= f.hidden_field :product_service, :value => 'product' %>
     <% else %>
-      <%= f.text_field :name, :title => 'e.g. nunchuck skillz' %>
+      <%= f.text_field :description, :title => 'e.g. nunchuck skillz' %>
       <%= f.hidden_field :product_service, :value => 'service' %>
     <% end %>
     <br/>
