--- a/app/views/postings/_info.html.erb
+++ b/app/views/postings/_info.html.erb
@@ -2,7 +2,7 @@
   <p>
     <%= @posting.user.full_name %>
     <%= @posting.have_need == 'have' ? 'has' : 'needs' %>
-    <%= @posting.name %>
+    <%= @posting.description %>
     <% unless @posting.from_date.blank? and @posting.to_date.blank? %>
     <br/>
     from <%= @posting.from_date %> to <%= @posting.to_date %>
