--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -2,5 +2,13 @@
 
 <% if current_user.id == @posting.user_id %>
   <%= link_to 'Edit Posting', edit_posting_path(@posting), :rel => 'facebox' %>
+<% else %>
+  <%= form_tag email_posting_path, :remote => true do %>
+    <%= text_area_tag 'message', nil, :placeholder => 'Enter optional message to user...' %>
+    <% if @posting.have_need == 'need' %>
+      <%= check_box_tag 'add_to_inventory' %>Add this item to your inventory?<br/>
+    <% end %>
+    <%= submit_tag @posting.have_need == 'have' ? 'Send Request' : 'Send Offer' %>
+  <% end %>
 <% end %>
 
